[tool.poetry]
name = "walk-forward-optimization"
version = "0.1.0"
description = ""
authors = ["femtotrader <femto.trader@gmail.com>"]
readme = "README.md"
packages = [{include = "walk_forward_optimization"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
