[tool.poetry]
name = "walk-forward-optimization"
version = "0.1.0"
description = ""
authors = ["femtotrader <femto.trader@gmail.com>"]
readme = "README.md"
packages = [{include = "walk_forward_optimization"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
pandas = "^1.5.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
